<resources>
    <string name="app_name" translatable="false">AAD</string>
    <string name="toast_btn">Toast</string>
    <string name="cust_toast_btn">Custom Toast</string>
    <string name="snackbar_btn">Snackbar</string>
    <string name="toast_text">Toast button clicked</string>
    <string name="no_desc">No Content Description</string>
    <string name="custom_toast_text">Custom toast clicked</string>
    <string name="snackbar_text">SnackBar button clicked</string>
    <string name="sb_actiontext">OK</string>
    <string name="notify">Notify Me!</string>
    <string name="mascot_notify">Mascot Notification</string>
    <string name="mascot_notify_desc">Notification from Mascot</string>
    <string name="notify_content_title">You\'ve been notified!</string>
    <string name="notify_content_text">This is your notification text.</string>
    <string name="next">Next</string>
    <string name="update">Update Me!</string>
    <string name="cancel">Cancel Me!</string>
    <string name="notify_update">Notification Updated!</string>
    <string name="notify_update_action_text">Update Notification</string>
    <string name="job_notify">Job Service notification</string>
    <string name="job_notify_desc">Notifications from Job Service</string>
    <string name="notify_job_title">Job Service</string>
    <string name="notify_job_content_text">Your Job ran to completion!</string>
    <string name="network_type_title">Network Type Required: </string>
    <string name="noneNetworkText">None</string>
    <string name="anyNetworkText">Any</string>
    <string name="wifiNetworkText">Wifi</string>
    <string name="schedule_job">Schedule Jobs</string>
    <string name="cancel_job">Cancel Jobs</string>
    <string name="job_scheduled_success_text">Job Scheduled, job will run when the constraints are met</string>
    <string name="job_cancel_text">Jobs cancelled</string>
    <string name="job_constraint_not_set">Please set atleast one constraint</string>
    <string name="requires_title">Requires: </string>
    <string name="device_idle">Device Idle</string>
    <string name="device_charging">Device Charging</string>
    <string name="override_deadline">Override Deadline: </string>
    <string name="deadline_not_set">Not Set</string>
    <string name="seekBar_time_unit">%1$d s</string>
</resources>
